<resources>
    <string name="app_name">DogWalker</string>
    <string name="add_dog_walker">Add Dog Walker</string>
    <string name="all_dog_walkers">All Dog Walkers</string>
    <string name="favorites">Favorites</string>
    <string name="description">Description</string>
    <string name="dog_walker_name">Dog Walker Name</string>
    <string name="enter_dog_walker_name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="hourly_wage">Hourly Wage</string>
    <string name="experience">Experience</string>
    <string name="dog_name">Dog Name</string>
    <string name="all_dogs">All Dogs</string>
    <string name="add_dog">Add Dog</string>
    <string name="chat">Chat</string>
</resources>